--- a/adapt.css
+++ b/adapt.css
@@ -7,6 +7,9 @@
         height: auto;
         justify-content: center;
         align-items: center;
+        padding-left: 10%;
+        padding-right: 10%;
+        padding-bottom: 10%;
     }
     .profile .foto{
         height:auto;
